chore(sandbox): Story 6.3 T2 — Keycloak + the host-run proxy launch recipe
The compose Keycloak service (pinned 26.7.0 per the 3.1 verdict, the
fixture server cert/key on https-only 8443, realm import mirroring
KeycloakFixture's VERIFIED launch line: DAG enabled, confidential client,
two ROPC users — usr1 the happy path, usr2 the AD-32 case-4 deny pair)
with the two posture deltas commented in-file (healthcheck is a
TCP-connect: KC serves management over TLS and the image ships no TLS
client; KC_BOOTSTRAP_ADMIN_* over the deprecated KEYCLOAK_ADMIN). The
realm export deliberately carries no secret — Keycloak generates one at
import, fetched via kcadm into the gitignored sandbox/secrets/ (AD-18;
.gitignore gains the entry); keycloak/certs/ is cmp-verified fixture-tier
test PKI, the same class the test tier commits. README §5 (both
languages): bootJar + the java -jar launch under the operator flag set
with reverse.mode-b args, expected startup_summary + Mode B banner + the
couple observable trued as-built (relay_binds_unknown_total on a reverse
cell), the §5.4 fails-loudly table, and §5.5 the docker-proxy variant
documented as optional (6.2-proven shape, not re-proven). Story record:
T2 done.

T3 (the correctness journeys + debugging guide) intentionally left
uncommitted in the working tree per owner direction.

Co-Authored-By: Claude Code <noreply@anthropic.com>